--- a/example/src/index.css
+++ b/example/src/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.app {
+  text-align: center;
+  margin-top: 50px;
+}
